Fix edit widget form alignments #511

--- a/app/assets/stylesheets/editor-3/_forms.scss
+++ b/app/assets/stylesheets/editor-3/_forms.scss
@@ -138,6 +138,7 @@
   display: flex;
   align-items: center;
   width: 92px;
+  height: 32px;
   min-height: 32px;
   margin-right: 12px;
 }
